test: testando git

--- a/ex001/index.html
+++ b/ex001/index.html
@@ -15,6 +15,7 @@
   <h5>Primeiro Script JS</h5>
   <h6>Primeiro Script JS</h6> -->
   <p>Me livrei da maldição</p>
+  <p>teste</p>
 
   <script>
     window.alert("Olá mundo")
