--- a/ex008/index.html
+++ b/ex008/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 008</title>
 </head>
-<body>
+<body style=
+"background-color:#553BE3;
+color: #87B3E3;
+
+">
     <h1>Vários Cálculos</h1>
     
     <button onclick="calcular()">Clique para calcular</button>
 
-    <section id="result">
+    <section id="result"
+    
+    style="border: 1px solid #0000;
+           border-radius: 25px;">
         <p>O resultado vai aparecer aqui</p>
     </section>
 
