feat: adicionado css ao exercício 28

--- a/ex028/index.html
+++ b/ex028/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Calculador de valor de câmbio</h1>
+    <h1>Calculador de Valor de Câmbio</h1>
 
     <section id="entrada">
         <form action="#" method="get">
             <label for="valDol">Valor em Reais: </label>
             <input type="number" step="any" name="valDol" id="reais" placeholder="Insira o valor em reais">
-            <input type="submit" value="calcCambio" formaction="javascript:calcCambio()">
+            <input class="enviar" type="submit" value="Calcular Câmbio" formaction="javascript:calcCambio()">
         </form>
     </section>
 
